2015-12-27 primitive version
Implemented the play list.

2015-12-26 primitive version
Implemented the stop button, fixed several bugs.

2015-12-25 primitive version
Implemented the GUI based on the previous CLI version.