@@ -4,9 +4,9 @@ A cross-platform midi file player based on libfluidsynth and Qt.
 Currently it's still very incomplete and not suitable for everyday use.
 
 Planned features:
-> Channel mute/solo (not implemented)
-> Editing channel parameters on-the-fly (not implemented)
-> Playlists (partially implemented)
-> Editing synthesizer effects (not implemented)
-> Visualization (not implemented)
-> Rendering midi to wave file (not implemented)
+* Channel mute/solo (not implemented)
+* Editing channel parameters on-the-fly (not implemented)
+* Playlists (partially implemented)
+* Editing synthesizer effects (not implemented)
+* Visualization (not implemented)
+* Rendering midi to wave file (not implemented)
