@@ -210,6 +210,9 @@
       <height>32</height>
      </size>
     </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="pbPList">
     <property name="geometry">
