@@ -1,3 +1,7 @@
+2015-12-28 primitive version
+Partially implemented the channel window.
+Fixed a seeking bug.
+
 2015-12-27 primitive version
 Implemented the play list.
 
